--- a/ImageMerger/packages.config
+++ b/ImageMerger/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Colourful" version="2.0.5" targetFramework="net472" />
   <package id="Costura.Fody" version="4.1.0" targetFramework="net472" />
   <package id="Extended.Wpf.Toolkit" version="4.0.2" targetFramework="net472" />
   <package id="Fody" version="6.0.0" targetFramework="net472" developmentDependency="true" />
