Change project name from ImageMerger to ImageMerger_GUI

--- a/ImageMerger_GUI/ImageMerger_GUI.csproj
+++ b/ImageMerger_GUI/ImageMerger_GUI.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D992BC30-D51A-4B54-9799-D61B68B4B209}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>ImageMerger</RootNamespace>
-    <AssemblyName>ImageMerger</AssemblyName>
+    <RootNamespace>ImageMerger_GUI</RootNamespace>
+    <AssemblyName>ImageMerger_GUI</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
