--- a/ImageMerger_GUI/packages.config
+++ b/ImageMerger_GUI/packages.config
@@ -1,12 +1,14 @@
-﻿<?xml version="1.0"
-      encoding="utf-8"?>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DeltaCompressionDotNet" version="1.1.0" targetFramework="net472" />
   <package id="Extended.Wpf.Toolkit" version="4.0.2" targetFramework="net472" />
   <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.0" targetFramework="net472" />
   <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
+  <package id="Mono.Cecil" version="0.11.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Prism.Core" version="8.0.0.1909" targetFramework="net472" />
   <package id="Prism.Wpf" version="8.0.0.1909" targetFramework="net472" />
+  <package id="SharpCompress" version="0.17.1" targetFramework="net472" />
+  <package id="squirrel.windows" version="2.0.1" targetFramework="net472" />
 </packages>
